force-app/main/default/objects/AnnualEmssnInventory.object
<CustomObject>
    <fields>
        <fullName>Average_Cost_per_REC__c</fullName>
        <formula>Total_Cost_of_REC_Purchases__c / Number_of_RECs_Applied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost per REC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_RECs_Applied__c</fullName>
        <label>Number of RECs Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_2_MB_Emissions_Offset_from_RECs__c</fullName>
        <formula>Number_of_RECs_Applied__c * Scope_2_MB_Emissions_mWh_Energy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope 2 MB Emissions Offset from RECs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_2_MB_Emissions_mWh_Energy__c</fullName>
        <formula>(Scope2MarketBasedEmssnCmclBld + Scope2MarketBasedEmssnDataCtr)/ ((EnergyUsageCommercialBld + EnergyUsageDataCenters)/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope 2 MB Emissions / mWh Energy</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_REC_Purchases__c</fullName>
        <label>Total Cost of REC Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>