force-app/main/default/objects/AnnualEmssnInventory/fields/Company_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Company_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Metrics</label>
    <referenceTo>Company_Metrics__c</referenceTo>
    <relationshipLabel>Annual Emissions Inventories</relationshipLabel>
    <relationshipName>Annual_Emissions_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>