force-app/main/default/objects/AnnualEmssnInventory/fields/External_Id__c.field-meta.xml
<CustomField>
       <fullName>External_Id__c</fullName>
       <externalId>true</externalId>
       <label>External Id</label>
       <length>25</length>
      <type>Text</type>
      <unique>true</unique>
</CustomField>