force-app/main/default/objects/AnnualEmssnInventory/fields/Total_Cost_of_Emissions__c.field-meta.xml
<CustomField>
      <fullName>Total_Cost_of_Emissions__c</fullName>
      <formula>Company_Metrics__r.Internal_Cost_of_Carbon__c *  (TotalScope1Emissions + TotalScope2Emissions)</formula>
      <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
      <label>Total Cost of Emissions</label>
      <precision>18</precision>
      <scale>0</scale>
      <type>Currency</type>
</CustomField>